--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
-    - run: npm ci
-    - run: node ./src/index.js > index.html
+    - run: sudo npm ci
+    - run: sudo node ./src/index.js > index.html
     - uses: EndBug/add-and-commit@v9
       with:
         default_author: github_actions
